<resources>
    <string name="app_name">myShop</string>
    <string name="button">Button</string>
    <string name="discover_and_buy_it">Discover and Buy it!</string>
    <string name="login_here">Login With Phone Number</string>
    <string name="log_out">Log Out</string>
    <string name="homeActivity">Home</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="UserName">User Name</string>
    <string name="product_name">Product Name</string>
    <string name="product_description">Product Description</string>
    <string name="close">Close</string>
    <string name="adress">Adress</string>
    <string name="name">Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="update">Update</string>
    <string name="please_confirm_your_shipment_detail">Please Confirm Your Shipment Detail</string>

</resources>
