<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar_setting"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorPrimary"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar_setting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/closeTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="0dp"
                    android:text="@string/close"
                    android:textColor="@android:color/white"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/updateTxt"
                    android:layout_width="82dp"
                    android:layout_height="match_parent"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginStart="242dp"
                    android:layout_marginTop="0dp"
                    android:layout_marginEnd="3dp"
                    android:layout_marginBottom="0dp"
                    android:layout_toEndOf="@+id/closeTxt"
                    android:text="@string/update"
                    android:textColor="@android:color/white"                    android:textSize="16sp"
                    android:textStyle="bold" />
            </RelativeLayout>


        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/setting_profileImg"
        android:layout_width="130dp"
        android:layout_height="120dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:src="@drawable/profile"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appbar_setting"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/changeProfileTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@+id/setting_profileImg"
        android:text="Change Profile picture"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/setting_profileImg"
        app:layout_constraintVertical_bias="0.042" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="40dp"
        app:layout_constraintTop_toBottomOf="@+id/changeProfileTxt"
        app:layout_constraintRight_toLeftOf="parent"
        app:layout_constraintLeft_toRightOf="parent"
        android:id="@+id/set_phoneNumber"
        android:background="@drawable/inputs"
        android:layout_marginTop="10dp"

        android:textColor="@android:color/white"
        android:hint="@string/phone_number"
        android:paddingLeft="15dp"
        />


    <EditText
        android:layout_width="match_parent"
        android:layout_height="40dp"
        app:layout_constraintTop_toBottomOf="@+id/set_phoneNumber"
        app:layout_constraintRight_toLeftOf="parent"
        app:layout_constraintLeft_toRightOf="parent"
        android:id="@+id/set_Name"
        android:background="@drawable/inputs"
        android:layout_marginTop="10dp"

        android:textColor="@android:color/white"
        android:paddingLeft="15dp"
        android:hint="@string/name"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="40dp"
        app:layout_constraintTop_toBottomOf="@+id/set_Name"
        app:layout_constraintRight_toLeftOf="parent"
        app:layout_constraintLeft_toRightOf="parent"
        android:id="@+id/set_Adress"

        android:textColor="@android:color/white"
        android:background="@drawable/inputs"
        android:layout_marginTop="10dp"
        android:paddingLeft="15dp"
        android:hint="@string/adress"
        />

</android.support.constraint.ConstraintLayout>